2007-01-22  Konstantin Triger <kostat@mainsoft.com>

	* Page.cs, ClientScriptManager.cs: ensure the web form client script is
		registerd before the client script includes are rendered.

2007-01-21  Konstantin Triger <kostat@mainsoft.com>

	* Page.cs: move the WriteClientScriptIncludes to the top of the form,
		according to the MSDN.

2007-01-16  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* TemplateControl.jvm.cs: remover TemplateSourceDirectory propery
	* Control.cs: moved TemplateSourceDirectory from TemplateControl for
	TARGET_JVM, fixed AppRelativeTemplateSourceDirectory

2007-01-16  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* TemplateControl.jvm.cs: added 2.0 event names for wiring up

2007-01-08  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* PageTheme.cs: implemented
	* Page.cs: fixed InitializeTheme, added PageTheme page initialization
	* TemplateControl.cs, 
	* TemplateControl.jvm.cs: added XPath, XPathSelect overloads with
	IXmlNamespaceResolver parameter
	* XPathBinder.cs: added Eval, Select overloads with
	IXmlNamespaceResolver parameter, refactored

2007-01-08  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* TemplateControl.jvm.cs: added GetGlobalResourceObject

2007-01-07 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: refactoring: used RegisterHiddenField for _VIEWSTATE field.

2007-01-04 Igor Zelmanovich <igorz@mainsoft.com>

	* Control.cs: ensure 'id' attribute will be rendered if 
	ClientID was accessed but ID is generated by the Page, 
	important for custom controls developing.

2007-01-04 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: fixed: InitializeCulture should be called 
	before creating controls.

2007-01-03  Marek Habersack  <grendello@gmail.com>

	* Page.cs: Make sure the ValidatorOnSubmit function is defined for the
	document before attempting to use it.

2007-01-01  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Control.cs: fixed ResolveClientUrl, wrong when control that calls